# LeadVille

./: .gitignore  .pre-commit-config.yaml  AMG_COMMANDER_CAPABILITIES.md  AMG_COMMANDER_QUICK_REFERENCE.md  AMG_IMPLEMENTATION_COMPARISON.md  API_README.md  ARCHITECTURE_REQUIREMENTS.md  AUTH_README.md  BRIDGE_IMPLEMENTATION_SUMMARY.md  BT50_RAW_DATA_QUERIES.md  CHANGELOG.md  CONSOLE_LOG_ALIGNMENT.md  DATABASE_INSPECTION_QUERIES.md  DEPLOYMENT_TOOLS.md  ENHANCED_BT50_README.md  FRONTEND_DEVELOPMENT.md  GITHUB_CREATION_OPTIONS.md  HANDOFF_2025-09-17.md  HANDOFF_2025-09-18.md  HANDOFF_2025-09-23_PART1.md  HANDOFF_2025-09-26.md  HANDOFF_2025-09-27_PART1.md  HANDOFF_2025-09-27_PART2.md  HANDOFF_2025-10-01.md  HANDOFF_2025-10-03.md  INSTALLATION.md  KIOSK_README.md  LICENSE  NETWORKING.md  PI_AMG_TEST_COMMANDS.md  PI_DEPLOYMENT.md  README.md  README_AMG_TIMER.md  README_WEBSOCKET_LIVE.md  REFACTORING-VALIDATION.md  SPECIALPIE_INVESTIGATION_LOG.md  TIME_SYNC_README.md  alembic.ini  amg_enhanced_test.py  amg_enhanced_test_comprehensive.py  (+109 more)
.githooks/: pre-commit
.github/: GITHUB_SETUP_GUIDE.md  ISSUES_TO_CREATE.md  PROJECT_ORGANIZATION.md  copilot-instructions.md  issues_to_create.csv
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md
.github/doc/: InterfaceLayer.md  PROJECT_ORGANIZATION.md
.github/scripts/: create_issues.py  import_issues_from_csv.py
.github/workflows/: create-issues.yml  deploy-to-pi.yml  import-issues-from-csv.yml  layout-check.yml
archive/: ARCHIVE_LIST.md  CONSOLE_LOG_SETUP.md  HANDOFF_2025-09-19.md  HANDOFF_2025-09-21.md  HANDOFF_2025-09-25.md  TIMER_SYSTEM_HANDOFF.md  add_second_sensor.py  add_sensor_id.py  api_test.html  apply_dual_fix.md  apply_dual_fix.py  bridge_patch.md  check_databases.py  check_db.py  check_db_detailed.py  check_stage_assignments.py  clean_bridge_patch.py  complete_sensor_fix.py  config.example.yaml  console_viewer_latest.py  create_simple_views.py  enhance_impact_logging.py  enhance_multi_sensor.py  enhanced_calibration_analysis.txt  enhanced_calibration_v2.txt  fix_bridge_ids.py  fix_calibration_handler.py  fix_calibration_processing.py  fix_database_config.py  fix_dual_detectors.py  fix_dual_sensor_connect.py  fix_sensor_identification.py  implement_complete_per_sensor_calibration.py  individual_calibration_fixed.txt  individual_sensor_calibration.txt  init_sensor_database.py  leadville_bridge_backup.md  leadville_bridge_backup_calib.md  leadville_bridge_backup_calib.py  leadville_bridge_backup_sensor.md  (+14 more)
archive/scripts/: SCRIPTS_README.md  check_sensors_config.py  commit_archive_helpers.ps1  commit_archive_scripts.ps1  commit_final_helper.ps1  device_api.py  finalize_archive_moves.ps1  setup_pi_services.sh  start_fastapi.py
config/: api_config.env.example  config.yaml  dev_config.json  development.yaml  mosquitto.conf
config/network/: dnsmasq.conf  hostapd.conf  nginx.conf
config/simulation_scenarios/: error_testing.json  precision_training.json  steel_challenge.json  uspsa_match.json
db/: bridge.db-shm  bridge.db-wal
deploy/: setup_service_bridge.py
docs/: AMG_COMMANDER_COMPLETE_DOCUMENTATION.md  BT50_RAW_DATA_QUERIES.md  DASHBOARD_LOCATION.md  DATABASE_INSPECTION_QUERIES.md  DATABASE_STRUCTURE.md  DATA_EXPORT.md  HANDOFF_2025-09-23.md  HANDOFF_2025-09-25.md  HANDOFF_2025-09-26.md  HANDOFF_2025-09-27_PART2.md  Local_pi_project_inventory.md  MQTT_MESSAGE_BUS.md  PI_vs_GitHub_Feature_Inventory.md  REFACTORING-VALIDATION.md  architecture.md  architecture_model.md  bridge_archive_analysis.md  leadville_bridge_analysis.md  pi_full_project_inventory.md  pi_full_project_inventory_raw.txt  pi_project_inventory.md  requirements_pi.txt  ssh_setup.md  timers.md  web_app_queries.sql
docs/architecture/: paths.md
examples/: amg_timer_demo.py  comprehensive_simulation_demo.py  device_management_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  react_spa_server.py  react_spa_server_3002.py  start_react.sh  tailwind.config.js  vite.config.ts
logs/: api_20250913.ndjson  timer_events_backup.jsonl
migrations/: create_bridge_config_tables.py  create_device_pool_tables.py  env.py  script.py.mako  test_schema.sql
scripts/: Deploy-DevicePool.ps1  Deploy-SpecialPie.ps1  Deploy-ToPi.ps1  QUICK_REFERENCE.md  README.md  archive_scripts_helpers.ps1  cleanup_repo.py  commit_last_script_moves.ps1  create_github_issues.py  debug_db_path.py  debug_fastapi_session.py  debug_sensor_identification.py  debug_sensor_info.py  debug_sensor_mappings.py  debug_sqlalchemy.py  demo_issues_creation.py  deploy_to_pi.sh  device_api.py  ensure_layout.py  execute_reorg_local.ps1  export_data.py  generate_openapi.py  init_database_views.py  install_precommit_hook.ps1  install_precommit_hook.sh  monitor_mqtt.py  move_last_scripts_helpers.ps1  prepare_offline.sh  scan_ble.py  setup_mqtt.sh  setup_networking.sh  setup_pi_services.sh  start_fastapi.py  start_timer_dashboard.py  test_mqtt_integration.py  timer_dashboard_backend.py  validate_installation.py  views.py
systemd/: README.md  leadville-api.service  leadville-bridge.service  leadville-fastapi.service  leadville-frontend.service  leadville-network.service  leadville-websocket.service  leadville.target
tests/: __init__.py  test_auth.py  test_bridge_lookup.py  test_data_export.py  test_database.py  test_db_session.py  test_device_management.py  test_e2e_simulation.py  test_impact_detector.py  test_mqtt.py  test_networking.py  test_no_hardcoded_paths.py  test_parser_imports.py  test_paths.py  test_sensor_database_lookup.py  test_simulation_framework.py  test_stage_api.py  test_stage_details.py  test_time_sync.py  test_timer_drivers.py  test_timer_drivers_simple.py  test_websocket_endpoints.py  test_websocket_fastapi.py  test_websocket_live.py  test_websocket_simple.py
tools/: battery_checker.py  battery_checker_usage.sh  battery_refresh_service.py  bt50_capture_db.py  bt50_db_inspect.py  bt50_export_csv.py  bt50_monitor.py  bt50_prune.py  bt50_prune_wrapper.py  compare_bt50_parsers.py  rssi_test.py  specialpie_sim.py  split_parser_outputs.py
(+177 files in other folders)
